# QCreports

./: .flake8  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  pyproject.toml  setup.py
QCreports/: __init__.py  generate_worksheets.py  io.py  utils.py
examples/: dashboard.py  reporting_QCplots.ipynb  run_dashboard.ipynb
examples/output_samples/historic/: report_data_historic.xlsx  report_data_historic_QCplots.xlsx
examples/output_samples/report_1wy_xmy_2025Q1/: report_data_1wy_xmy.xlsx  report_data_1wy_xmy_QCplots.xlsx
examples/output_samples/report_1wy_xmy_2025Q2/: report_data_1wy_xmy.xlsx  report_data_1wy_xmy_QCplots.xlsx
examples/output_samples/report_xwy_xmy_2025Q1/: report_data_xwy_xmy.xlsx  report_data_xwy_xmy_QCplots.xlsx
examples/output_samples/report_xwy_xmy_2025Q2/: report_data_xwy_xmy.xlsx  report_data_xwy_xmy_QCplots.xlsx
qcreports/: __init__.py  io.py  plot.py  utils.py  version.py
qcreports/report_definition/: __init__.py  report_1wy_xmy.py  report_custom_mix.py  report_historic.py  report_xwy_xmy.py
qctemplate/: __init__.py  version.py
