[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
# Change this to your package name
name = "qctemplate"
dynamic = ["version"]
# Change this to your package description
description = "Example package for new Quantified Carbon projects"
authors = [
    { name = "Quantified Carbon"}
]
maintainers = [
    { name = "Quantified Carbon"}
]
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3"
]
dependencies = [
    # Add your dependencies here
]

[tool.setuptools.dynamic]
# Change this to your package name
version = { attr = "qctemplate.version.__version__" }  

[project.optional-dependencies]
test = [
    # Test tools
    "pytest",
    "pytest-cov",
    "pytest-md",
    # Extras go here (maybe tests need jupyter or similar)
]
