[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
# Change this to your package name
name = "qcreports"
dynamic = ["version"]
# Change this to your package description
description = "Report generation package for reference scenerios"
authors = [
    { name = "Quantified Carbon"}
]
maintainers = [
    { name = "Quantified Carbon"}
]
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3"
]
dependencies = [
        "pandas",
        "geopandas",
        "matplotlib",
        "python-box",
        "numpy",
        "QCcolours>=1.1.4",
        "QCplots>=1.0.5",
        "QCmaps",
        "cgriddb",
        "adjustText",
]

[tool.setuptools.dynamic]
version = { attr = "qcreports.version.__version__" }  

[project.optional-dependencies]
test = [
    # Test tools
    "pytest",
    "pytest-cov",
    "pytest-md",
    # Extras go here (maybe tests need jupyter or similar)
]
